Fix: Increase timeline spacing to prevent icon overlap with text

--- a/css/style.css
+++ b/css/style.css
@@ -447,17 +447,17 @@ nav ul li a:hover {
 .timeline-item:nth-child(odd) .timeline-content {
   margin-left: 0;
   margin-right: auto;
-  width: 45%;
+  width: 40%;
   text-align: right;
-  padding-right: 50px;
+  padding-right: 80px;
 }
 
 .timeline-item:nth-child(even) .timeline-content {
   margin-left: auto;
   margin-right: 0;
-  width: 45%;
+  width: 40%;
   text-align: left;
-  padding-left: 50px;
+  padding-left: 80px;
 }
 
 .timeline-marker {
@@ -465,15 +465,15 @@ nav ul li a:hover {
   left: 50%;
   top: 0;
   transform: translateX(-50%);
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   background: #fff;
   border: 4px solid #009688;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.8rem;
+  font-size: 2rem;
   box-shadow: 0 0 0 8px #e0f7f7;
   z-index: 10;
   transition: 0.3s;
@@ -525,21 +525,22 @@ nav ul li a:hover {
 /* Responsive Timeline */
 @media (max-width: 768px) {
   .timeline::before {
-    left: 20px;
+    left: 30px;
   }
 
   .timeline-marker {
-    left: 20px;
-    width: 40px;
-    height: 40px;
-    font-size: 1.4rem;
+    left: 30px;
+    width: 50px;
+    height: 50px;
+    font-size: 1.6rem;
   }
 
   .timeline-item:nth-child(odd) .timeline-content,
   .timeline-item:nth-child(even) .timeline-content {
-    width: calc(100% - 80px);
+    width: calc(100% - 100px);
     text-align: left;
-    margin-left: 80px;
+    margin-left: 90px;
+    margin-right: 0;
     padding-left: 20px;
     padding-right: 20px;
   }
